# onboarding-project1

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: main.py
src/controller/: cep_controller.py  exchange_controller.py
src/infrastructure/: logger.py
src/model/: Address.py  Cep.py  CepApiFailure.py  CepApiSuccess.py  Failure.py  cep_controller_types.py  cep_types.py  env_settings.py  exchange_controller_types.py  exchange_types.py
src/service/: cep_requests.py  exchange_requests.py
src/utils/: cep_utils.py
tests/contract_consumer_side/: test_external_cep_api.py  test_external_exchange_api.py
tests/model/: test_Address.py  test_Cep.py  test_cep.py
tests/service/: test_cep_requests.py  test_exchange_requests.py
